[package]
name = "tile-server"
version = "0.1.0"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-files = "0.4"
actix-web = "3.1"
gdal = { git = "https://github.com/georust/gdal" }
serde = { version = "1.0", features = ["derive"] }
