[package]
name = "tile-server"
version = "0.1.0"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
gdal = { git = "https://github.com/georust/gdal" }
hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6", features = ["fs", "net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
